--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img class='gohome' border="0" alt="Logo" src="lighthouse-logo.png" width="200" height="40">
 
       <nav>
-        <button class='button1 Strategy' type="submit">Strategy</button>
+        <button class='button1 Strategy' type="submit"> Career Readiness Bootcamp </button>
         <button class=' button1 applications' type="submit">Applications</button>
         <button class='button1 JobBoards' type="submit">Job Boards</button>
         <button class='button1 GitHub' type="submit">Github</button>
@@ -45,7 +45,7 @@
       </h1>
       </br>
       <div class="mainbuttons">
-        <button class='button2 Strategy'  type="submit">💻 Strategy</button>
+        <button class='button2 Strategy'  type="submit">💻 Career Readiness Bootcamp </button>
         <button class='button2 applications' type="submit"> 📋 Applications</button>
         <button class='button2 JobBoards' type="submit">📋Job Boards</button>
         <button class='button2 GitHub' type="submit">👩‍💻 Github</button>
@@ -55,26 +55,11 @@
     </div>
     <div class="white">
 
-      <section class="strategy">
+      <section class="Career Readiness Bootcamp">
         <h2>
-          💻 Strategy
+          💻 Career Readiness Bootcamp
         </h2>
-        <p1>
-          Job Search Todos:
-          <ul>
-          <li>Ensure your resume stays up to date: See applications (resume maintenance) section</li>
-          <li>Keep coding and have Github activity: See Github and technical interview Section for resources</li>
-          <li>Apply for jobs: See job boards and applications section</li>
-          <li>Attend industry events, meetups and other networking events: see networking section</li>
-          <li>Stay engaged with Career Services: we are here to help!</li>
-
-        </ul>
-        Important Resources:
-        <ul>
-          <li><a href="https://docs.google.com/document/d/1iKA8qJXfuSqNi8f5xSSCZ6LEW9t-JeehUbC6zzDVEQI/edit" target="_blank">Job Seekers Agreement</a></li>
-<li>Set up your <a href="https://huntr.co/" target="_blank">huntr board</a></li>
-  <li><a href="https://docs.google.com/presentation/d/1cgWxVPMyqru6ieXO3mHt4oGz3_tYwn8rRocp_HjGSF8/edit?usp=sharing" target="_blank">Job Search Kickoff Workshop Slides</a></li>
-        </p1>
+        <iframe class="airtable-embed" src="https://airtable.com/embed/shrvVNX6kOJhhoXtq?backgroundColor=purpleLight&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
       </section>
 
       <section class="application">
