--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </h1>
       </br>
       <div class="mainbuttons">
-        <button class='button2 Strategy'  type="submit">💻 Strategy</button>
+        <button class='button2 Strategy'  type="submit">💻 Career Readiness Bootcamp</button>
         <button class='button2 applications' type="submit"> 📋 Applications</button>
         <button class='button2 JobBoards' type="submit">📋Job Boards</button>
         <button class='button2 GitHub' type="submit">👩‍💻 Github</button>
@@ -57,16 +57,9 @@
 
       <section class="strategy">
         <h2>
-          💻 Strategy
+          🌟 Career Readiness Bootcamp
         </h2>
-        <p1>
-          Job Search Todos:
-          <ul>
-          <li>Ensure your resume stays up to date: See applications (resume maintenance) section</li>
-          <li>Keep coding and have Github activity: See Github and technical interview Section for resources</li>
-          <li>Apply for jobs: See job boards and applications section</li>
-          <li>Attend industry events, meetups and other networking events: see networking section</li>
-          <li>Stay engaged with Career Services: we are here to help!</li>
+        <iframe class="airtable-embed" src="https://airtable.com/embed/shrvVNX6kOJhhoXtq?backgroundColor=purpleLight&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
 
         </ul>
         Important Resources:
